--- a/src/components/ChatScreen.css
+++ b/src/components/ChatScreen.css
@@ -1,8 +1,11 @@
+:root {
+  --border-color: rgba(255, 255, 255, 0.3);
+}
 .chat {
-  min-height: 100vh;
+  min-height: 500px;
+  height: 100vh;
   overflow-y: hidden;
   display: flex;
-
   color: white;
 }
 
@@ -11,28 +14,26 @@
   flex-direction: column;
   flex: 1;
   min-width: 320px;
-  border-right: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.chat__main {
-  flex: 4;
-  height: auto;
-  min-width: 500px;
+  border-right: 1px solid var(--border-color);
 }
 
 .sidebar__header {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 1rem;
+  border-bottom: 1px solid var(--border-color);
+  padding: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5.5rem;
 }
 
-.sidebar__title {
-  font-weight: 400;
-  font-size: 2.5rem;
-  background-image: linear-gradient(0deg, rgba(167, 22, 168, 1) 0%, rgba(223, 20, 224, 1) 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  margin: 0;
+.sidebar__username {
+  font-size: 1.3rem;
+}
+
+.sidebar__username-tag {
+  color: #a716a8;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
 
 .sidebar__chats {
@@ -56,8 +57,8 @@
 }
 
 .chat-card__avatar {
-  height: 3.5rem;
-  flex: 0 0 3.5rem;
+  height: 3rem;
+  flex: 0 0 3rem;
   border-radius: 100%;
   background-color: #ff3cac;
   background-image: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
@@ -79,4 +80,124 @@
   padding: 0;
   text-overflow: ellipsis;
   overflow: hidden;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.new-chat__btn {
+  height: 2.4rem;
+  width: 2.4rem;
+  outline: 0;
+  border: 0;
+  background-color: #784ba0;
+  background-image: linear-gradient(0deg, #a716a8 0%, #df14e0 100%);
+  border-radius: 100%;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 0 25px #784ba0;
+  transition: all 0.2s;
+}
+
+.new-chat__btn:active {
+  transform: scale(0.95);
+}
+
+.new-chat__btn svg {
+  height: 80%;
+}
+
+.selected-chat {
+  display: flex;
+  flex-direction: column;
+  flex: 4;
+  height: auto;
+  min-width: 500px;
+}
+
+.selected-chat__main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.selected-chat__form {
+  display: flex;
+  gap: 1.5rem;
+  padding: 1rem;
+  border-top: 1px solid var(--border-color);
+  align-items: center;
+}
+
+.selected-chat__input {
+  width: 100%;
+  resize: none;
+  border: 0;
+  background: 0;
+  outline: 0;
+  color: white;
+  font-size: 1rem;
+}
+
+.selected-chat__send-btn {
+  border: 0;
+  border-radius: 0.1rem;
+  font-size: 1rem;
+  padding: 0.4rem 1rem;
+  cursor: pointer;
+  color: white;
+  background: #a716a8;
+  font-weight: 500;
+  box-shadow: 0 0 25px #784ba0;
+  transition: background 0.2s;
+}
+
+.selected-chat__send-btn:hover {
+  background: #be19be;
+}
+
+.selected-chat__header {
+  height: 5.5rem;
+  border-bottom: 1px solid var(--border-color);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 2rem;
+}
+
+.selected-chat__messages {
+  flex: 1 1 1px;
+  padding: 0 3rem;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  padding: 0.3rem 0.6rem;
+  font-size: 0.9rem;
+  margin: 0.8rem 0;
+  border-radius: 0.3rem;
+  margin-right: auto;
+  background: #784ba0;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.message.self {
+  background-color: #a716a8;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.message__text {
+
+}
+
+.message__date {
+  margin-top: 0.4rem;
+  align-self: flex-end;
+  font-size: 0.75rem;
+  color: rgba(255, 255, 255, 0.7);
 }
