--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   background-color: black;
+  color: white;
 }
 
 body,
@@ -19,4 +20,8 @@ code {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --border-color: rgba(255, 255, 255, 0.3);
 }
